--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tenek-service",
-  "version": "1.0.0",
+  "name": "tenek-translate-service",
+  "version": "1.0.1",
   "description": "Dictionary service for tenek language / Spanish",
   "main": "index.js",
   "scripts": {
@@ -8,14 +8,15 @@
     "dev": "nodemon src/index"
   },
   "funding": {
-    "type" : "individual",
-    "url" : "https://creadores.fans/terry_rockstar"
+    "type": "individual",
+    "url": "https://creadores.fans/terry_rockstar"
   },
   "keywords": [],
   "author": "terry0022",
   "license": "UNLICENSED",
   "dependencies": {
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
     "express-session": "^1.17.1",
