--- a/.github/FUNDING.yml
+++ b/.github/FUNDING.yml
@@ -1,4 +1,4 @@
 # These are supported funding model platforms
 
-github: terry0022
-custom: 'https://creadores.fans/terry_rockstar'
+github: terry1921
+custom: https://www.paypal.com/paypalme/terry0022?locale.x=es_XC
