refactor: Add helmet, rename folder, and update packages

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,13 +1,13 @@
-sonar-project.properties
+# login credentials
+sonar.host.url=http://localhost:9000
+sonar.login=768783b5558c604f167453e57044cab8035ee974
 # must be unique in a given SonarQube instance
-sonar.projectKey=tenek-service
-
+sonar.projectKey=tenek-translate-service
 # --- optional properties ---
-
 # defaults to project key
-sonar.projectName=Tenek Service
+sonar.projectName=Tenek Translate Service
 # defaults to 'not provided'
-sonar.projectVersion=1.0.0
+sonar.projectVersion=1.0.1
 
 # Path is relative to the sonar-project.properties file. Defaults to .
 sonar.sources=.
@@ -15,5 +15,3 @@ sonar.sources=.
 
 # Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
-sonar.host.url=http://localhost:9000
-sonar.login=52edc1235d0fe54e470afa889f62615b328d9c09
