--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/index",
-    "dev": "nodemon src/index"
+    "dev": "nodemon src/index",
+    "development": "nodemon src/index"
   },
   "funding": {
     "type": "individual",
@@ -20,6 +21,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.3.3",
     "express-session": "^1.17.1",
+    "helmet": "^4.6.0",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
